--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <style>
         @font-face {
             font-family: 'Mabinogi';
-            src: url('Mabinogi_Classic_TTF.ttf') format('truetype');
+            src: url('https://nauni83.github.io/mabinogi-font/Mabinogi_Classic_TTF.ttf') format('truetype');
         }
         body {
             font-family: 'Mabinogi', sans-serif;
@@ -17,6 +17,6 @@
     </style>
 </head>
 <body>
-    <h1>마비노기 폰트 테스트랄랄</h1>
+    <h1>마비노기 폰트 테스트 랄랄 성공!</h1>
 </body>
 </html>
